# multilayer-perceptron

./: .gitignore  Cargo.toml  README.md
src/: idx.rs  lib.rs  main.rs
