[package]
name = "digitnn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
byteorder = "1.4.3"
num = "0.4"
termcolor = "1.1"
ron = "0.7.0"
clap = "3.1.12"
indicatif = "0.16.2"
serde = "1.0"
